--- a/buildspec.yml
+++ b/buildspec.yml
@@ -3,11 +3,12 @@ version: 0.2
 env:
   variables:
     S3_BUCKET: "codepipeline-eu-west-1-584072237620"
+    KMS_ID: "arn:aws:kms:eu-west-1:526200438718:alias/aws/s3"
 
 phases:
   install:
     commands:
-      - aws cloudformation package --template-file lego-catalog.yaml --kms-key-id arn:aws:kms:eu-west-1:526200438718:alias/aws/s3 --s3-bucket ${S3_BUCKET} --output-template-file outputSamTemplate.yaml
+      - aws cloudformation package --template-file lego-catalog.yaml --kms-key-id ${KMS_ID} --s3-bucket ${S3_BUCKET} --output-template-file outputSamTemplate.yaml
 
 artifacts:
   type: zip
