--- a/lego-catalog.yaml
+++ b/lego-catalog.yaml
@@ -7,6 +7,7 @@ Resources:
   legocatalog:
     Type: 'AWS::Serverless::Function'
     Properties:
+      FunctionName: lego-catalog
       Handler: index.handler
       Runtime: nodejs8.10
       CodeUri: .
